
package managarm.hw;

option optimize_for = LITE_RUNTIME;

enum IoType {
	NONE = 0;
	PORT = 1;
	MEMORY = 2;
}

message PciBar {
	optional IoType io_type = 1;

	// physical address of this BAR. only relevant for IO BARs
	optional uint64 address = 3;

	optional uint64 length = 2;

//	bool prefetchable = 4;
}

message PciDevice {
	repeated PciBar bars = 1;
}

